# BugSquashGame

./: CMakeLists.txt  GameApp.cpp  GameApp.h  README.md  main.cpp  pch.h
BugGameLib/: Bug.cpp  Bug.h  BugFeature.cpp  BugFeature.h  BugGarbage.cpp  BugGarbage.h  BugNull.cpp  BugNull.h  BugRedundancy.cpp  BugRedundancy.h  CMakeLists.txt  DeleteCloseBugs.cpp  DeleteCloseBugs.h  FatBug.cpp  FatBug.h  FatGarbageBug.cpp  FatGarbageBug.h  Game.cpp  Game.h  GameView.cpp  GameView.h  Item.cpp  Item.h  ItemVisitor.cpp  ItemVisitor.h  Laptop.cpp  Laptop.h  MainFrame.cpp  MainFrame.h  Message.cpp  Message.h  Scoreboard.cpp  Scoreboard.h  ids.h  pch.h
Tests/: BugTest.cpp  BugTest.h  CMakeLists.txt  TestGame.cpp  gtest_main.cpp
data/: level3.xml
